--- a/src/pages/[locale]/index.astro
+++ b/src/pages/[locale]/index.astro
@@ -25,7 +25,7 @@ const creador = translate.creator_name;
     <div class="flex flex-col w-full" id="sections-wrapper" aria-label="Contenedor de las secciones de la página">
 
         {/* INTRODUCTION SECTION */}
-        <section class="relative overflow-hidden min-h-screen w-full bg-slate-950 flex flex-col" aria-label="Introduction section" data-skip-nav>
+        <section class="relative overflow-hidden min-h-screen w-full dark:bg-slate-950 bg-slate-50 flex flex-col" aria-label="Introduction section" data-skip-nav>
             <div class="about-container-mask absolute inset-0 z-0"></div>
             <div 
                 class="-z-10 absolute inset-0 bg-[linear-gradient(to_right,#4f4f4f2e_1px,transparent_1px),linear-gradient(to_bottom,#4f4f4f2e_1px,transparent_1px)] red">
@@ -76,6 +76,24 @@ const creador = translate.creator_name;
         mask-repeat: no-repeat;
         mask-position: center;
     }
+
+    html:not(.dark) .about-container-mask {
+        background: linear-gradient(
+            to right,
+            #b3b3b32e 1px,
+            transparent 1px
+        ),
+        linear-gradient(to bottom, #b3b3b32e 1px, transparent 1px);
+        background-size: 40px 40px;
+        -webkit-mask-image: radial-gradient(ellipse 60% 70% at 50% 50%, #000 70%, transparent 100%);
+        -webkit-mask-repeat: no-repeat;
+        -webkit-mask-position: center;
+        mask-image: radial-gradient(ellipse 60% 70% at 50% 50%, #000 70%, transparent 100%);
+        mask-repeat: no-repeat;
+        mask-position: center;
+    }
+
+
 
     .red {
         background-size: 14px 24px;
