--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -5,8 +5,8 @@ const { creador, translate, locale } = Astro.props;
 <div
     class="pt-(--header-h) w-full flex flex-col justify-center items-center text-center"
 >
-    <h1 class="text-4xl text-white mb-4">{translate.nav.about_me}</h1>
-    <p class="max-w-2xl text-white/80 max-[180px]:text-sm text-lg">
+    <h1 class="text-4xl dark:text-white text-black mb-4">{translate.nav.about_me}</h1>
+    <p class="max-w-2xl dark:text-white/80 text-black/80 max-[180px]:text-sm text-lg">
         {translate.temporary_text}
     </p>
 </div>
