--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,9 +13,9 @@ const navContent = getNavContent(locale);
         <section class="w-full max-w-full md:max-w-[1400px] transition-all mx-0 md:mx-auto flex flex-col md:flex-row gap-6 md:gap-12 justify-center md:justify-between items-stretch py-3 md:py-10">
             {/* ABOUT ME - FOOTER */}
             <div class="flex flex-col w-full max-w-[270px] mx-auto md:mx-0 text-sm text-center md:text-left py-3 md:py-0" aria-label="Sobre mí">
-                <p class="text-white">
-                    <span class="text-yellow-100">Desarollador web</span> apasionado por las curiosidades de la <span class="text-yellow-100">programación</span> y 
-                    <span class="text-yellow-100">creación de páginas webs</span> y asegurar la calidad para los clientes
+                <p class="dark:text-white text-black">
+                    <span class="dark:text-yellow-100 text-yellow-500">Desarollador web</span> apasionado por las curiosidades de la <span class="dark:text-yellow-100 text-yellow-500">programación</span> y 
+                    <span class="dark:text-yellow-100 text-yellow-500">creación de páginas webs</span> y asegurar la calidad para los clientes
                 </p>
             </div>
     
@@ -26,7 +26,7 @@ const navContent = getNavContent(locale);
                         navContent.map((item) => {
                             const { label } = item;
                             return (
-                            <button class="cursor-pointer border-none text-center md:text-left outline-none text-white/80 hover:text-white text-sm transition-colors footer-link">
+                            <button class="cursor-pointer border-none text-center md:text-left outline-none dark:text-white/80 text-black/80 dark:hover:text-white hover:text-black text-sm transition-colors footer-link">
                                 { label }
                             </button>
                             )
@@ -40,9 +40,9 @@ const navContent = getNavContent(locale);
                 <a href="https://github.com/yarosprojects?tab=repositories" target="_blank" class="py-3">
                     <i class="icon-[line-md--github] text-xl" />
                 </a>
-                <a href={`mailto:${email}`} class="px-4 py-3 text-sm bg-gray-900 rounded-full w-fit h-fit ml-0 md:ml-4 transition-all hover:brightness-125">
-                    {translate.nav.contact}
-                    <i class="icon-[line-md--email]" />
+                <a href={`mailto:${email}`} class="px-4 py-2 text-sm dark:bg-gray-900 bg-gray-300 rounded-full w-fit h-fit ml-0 md:ml-4 transition-all dark:hover:brightness-125 hover:brightness-90">
+                    <span class="dark:text-white text-black">{translate.nav.contact}</span>
+                    <i class="icon-[line-md--email] dark:text-white text-black/80" />
                 </a>
             </div>
         </section>
@@ -50,11 +50,11 @@ const navContent = getNavContent(locale);
     {/* COPYRIGHT */}
     <section class="w-full flex flex-col pt-6 md:pt-0" aria-label="Sección de derechos de autor">
         <div class="w-full flex justify-center items-center py-4 px-4 md:px-0">
-            <div class="text-[13px] text-white flex w-full justify-center items-center flex-col md:flex-row gap-0 md:gap-1 text-center">
-                <span class="text-white/70">
+            <div class="text-[13px] dark:text-white text-black flex w-full justify-center items-center flex-col md:flex-row gap-0 md:gap-1 text-center">
+                <span class="dark:text-white/70 text-black/70">
                     &copy; {new Date().getFullYear()} Yaroslav Klymko
                 </span>
-                <span>
+                <span class="dark:text-white text-black">
                     {translate.all_rights_reserved}
                 </span> 
             </div>
