--- a/src/components/IntroSection.astro
+++ b/src/components/IntroSection.astro
@@ -23,18 +23,17 @@ const cfgs_started_at = 2022;
             class="flex flex-1 p-4 md:px-8 md:py-15 flex-col items-center md:items-start justify-start w-full h-full"
         >
             <span
-                class="text-white text-center md:text-left text-3xl font-extrabold animate-fade-in animate-duration-50"
+                class="dark:text-white text-black text-center md:text-left text-3xl font-extrabold animate-fade-in animate-duration-50"
             >
                 {creador}
             </span>
-            <div class="py-2 w-full">
-                <hr class="w-full" />
+            <div class="my-2 h-px rounded-full w-xs md:w-full dark:bg-white/80 bg-black/80">
             </div>
             <div
                 class="flex m-0 p-0 justify-center md:justify-start w-full overflow-hidden"
             >
                 <span
-                    class="text-yellow-400 font-bold animate-fade-in-up animate-duration-800 animate-delay-250 max-[195px]:text-base text-xl selection:bg-transparent
+                    class="dark:text-yellow-400 text-yellow-600 font-bold animate-fade-in-up animate-duration-800 animate-delay-250 max-[195px]:text-base text-xl selection:bg-transparent
                     selection:backdrop-blur-3xl selection:text-white/70 text-center md:text-left"
                 >
                     {translate.intro.fullstack_web_developer}
@@ -45,7 +44,7 @@ const cfgs_started_at = 2022;
                     href="https://www.linkedin.com/in/yaroslav-klymko-psip"
                     target="_blank"
                     rel="noopener"
-                    class="px-4 py-2 bg-gray-800 hover:bg-gray-700 transition-all hover:scale-105 rounded-full shadow-lg shadow-white/20 w-fit md:mx-0 mx-auto text-green-300"
+                    class="px-3 py-1 dark:bg-gray-800 bg-green-300/50 dark:hover:bg-gray-700 hover:bg-green-300/50 transition-all hover:scale-105 rounded-full shadow-lg shadow-white/20 w-fit md:mx-0 mx-auto dark:text-green-300 text-green-700 border dark:border-transparent border-green-500"
                     aria-label="Enlace a LinkedIn"
                 >
                     #OpenToWork
@@ -66,8 +65,8 @@ const cfgs_started_at = 2022;
                 </div>
             </div>
             <div class="flex flex-col px-2">
-                <p class="text-yellow-50 font-bold uppercase text-2xl">{translate.intro.years_of_experience}</p>
-                <span class="text-white/75 text-sm">
+                <p class="dark:text-yellow-50 text-yellow-500 font-bold uppercase text-2xl">{translate.intro.years_of_experience}</p>
+                <span class="dark:text-white/75 text-black/75 text-sm">
                     {translate.intro.work_plus_personal_experience}
                 </span>
             </div>
@@ -87,8 +86,8 @@ const cfgs_started_at = 2022;
             </div>
             */}
             {/* <div class="flex md:hidden w-1/2 h-0.5 bg-white rounded-full mt-5"></div> */}
-            <p class="text-white/70 max-[195px]:text-base text-xl text-center md:text-left mt-20 mb-5 selection:bg-yellow-500 selection:text-black">
-                <span class="text-yellow-300 font-extrabold">
+            <p class="dark:text-white/70 text-black/70 max-[195px]:text-base text-xl text-center md:text-left mt-20 mb-5 selection:bg-yellow-500 selection:text-black">
+                <span class="dark:text-yellow-300 text-yellow-500 font-extrabold">
                     {locale === "en-GB" ? translate.intro.web_applications.charAt(0).toUpperCase() + translate.intro.web_applications.slice(1) : translate.intro.developer}
                     { (locale === "es-ES" || locale === "ca-ES") && (
                         <span class="text-white/70">{locale === "ca-ES" ? 'dels' : 'de'}</span>
@@ -96,16 +95,16 @@ const cfgs_started_at = 2022;
                     {locale === "en-GB" ? translate.intro.developer.toLowerCase() : translate.intro.web_applications}
                 </span>
                 {translate.intro.bioinformatical_profile}
-                <span class="text-yellow-100 relative before:absolute before:content-[''] before:left-0 before:top-full before:w-0 before:h-px before:bg-yellow-100 before:animate-width-to-full">
+                <span class="dark:text-yellow-100 text-yellow-500 relative before:absolute before:content-[''] before:left-0 before:top-full before:w-0 before:h-px dark:before:bg-yellow-100 before:bg-yellow-500 before:animate-width-to-full">
                     {translate.intro.bioinformatical}
                 </span>
                 <br>
                 {translate.intro.from} 
-                <a href="https://maps.app.goo.gl/7TDSxg5tGKfRuGfc6" target="_blank" class="hover:text-white inline-block backdrop-blur-3xl hover:px-2 hover:scale-105 transition-all mt-1">{translate.cities.psip}</a>, {translate.countries.spain}.
+                <a href="https://maps.app.goo.gl/7TDSxg5tGKfRuGfc6" target="_blank" class="dark:hover:text-white hover:text-black inline-block backdrop-blur-3xl hover:px-2 dark:hover:bg-transparent hover:bg-gray-900/10 hover:scale-105 transition-all mt-1">{translate.cities.psip}</a>, {translate.countries.spain}.
                 <br>
             </p>
-            <p class="text-white/70 max-[195px]:text-base text-xl text-center md:text-left selection:bg-yellow-500 selection:text-black mt-8 md:mb-0 mb-5 md:mt-0">
-                {translate.intro.focused_on} <span class="text-yellow-100">{translate.intro.creation}</span>, <span class="text-yellow-100">{translate.intro.maintenance}</span> {translate.intro.and} <span class="text-yellow-100">{translate.intro.resolution}</span> {translate.intro.of_the} <span class="text-yellow-100">{translate.intro.vulnerability}</span> {translate.intro.of_normal} {translate.intro.of_static_and_dynamic_web_pages} <span class="text-yellow-100">{translate.intro.statics}</span> {translate.intro.and_normal} <span class="text-yellow-100">{translate.intro.dynamics}</span> 
+            <p class="dark:text-white/70 text-black/70 max-[195px]:text-base text-xl text-center md:text-left selection:bg-yellow-500 selection:text-black mt-8 md:mb-0 mb-5 md:mt-0">
+                {translate.intro.focused_on} <span class="dark:text-yellow-100 text-yellow-500">{translate.intro.creation}</span>, <span class="dark:text-yellow-100 text-yellow-500">{translate.intro.maintenance}</span> {translate.intro.and} <span class="dark:text-yellow-100 text-yellow-500">{translate.intro.resolution}</span> {translate.intro.of_the} <span class="dark:text-yellow-100 text-yellow-500">{translate.intro.vulnerability}</span> {translate.intro.of_normal} {translate.intro.of_static_and_dynamic_web_pages} <span class="dark:text-yellow-100 text-yellow-500">{translate.intro.statics}</span> {translate.intro.and_normal} <span class="dark:text-yellow-100 text-yellow-500">{translate.intro.dynamics}</span> 
                 {translate.intro.websites}
                 .
             </p>
@@ -119,11 +118,11 @@ const cfgs_started_at = 2022;
                             FRAMEWORKS.map((framework) => {
                                 const { name, animation_delay, img } = framework;
                                 return (
-                                    <div class="flex flex-row justify-center items-center gap-2 px-5 md:px-4 py-2 md:py-2 rounded-full bg-gray-800 animate-fade-in framework-card"
+                                    <div class="flex flex-row justify-center items-center gap-2 px-5 md:px-4 py-2 md:py-2 rounded-full dark:bg-gray-800 bg-gray-300 animate-fade-in framework-card"
                                         style={`animation-delay: ${animation_delay}ms;`}
                                     >
                                         <img src={img} alt={`Image of ${name}`} class={`size-5 ${name.toLowerCase() === "java" ? '-translate-y-0.75' : ''}`} />
-                                        <span>
+                                        <span class="dark:text-white text-black">
                                             {name}
                                         </span>
                                     </div>
@@ -155,11 +154,11 @@ const cfgs_started_at = 2022;
                             LANGUAGES.map((language) => {
                                 const { name, animation_delay, img } = language;
                                 return  (
-                                    <div class="flex flex-row justify-center items-center gap-2 px-5 md:px-4 py-2 md:py-2 rounded-full bg-gray-800 animate-fade-in language-card"
+                                    <div class="flex flex-row justify-center items-center gap-2 px-5 md:px-4 py-2 md:py-2 rounded-full dark:bg-gray-800 bg-gray-300 animate-fade-in language-card"
                                         style={`animation-delay: ${animation_delay}ms;`}
                                     >
                                         <img src={img} alt={`Image of ${name}`} class={`size-5 ${name.toLowerCase() === "java" ? '-translate-y-0.75' : ''}`} />
-                                        <span>
+                                        <span class="dark:text-white text-black">
                                             {name}
                                         </span>
                                     </div>
