--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -70,8 +70,8 @@ const PROJECTS = {
 ---
 <div class="pt-(--header-h) w-full flex justify-center items-center px-2 md:px-0">
     <div class="w-full max-[235px]:flex-col md:max-w-3xl mx-0 md:mx-auto flex justify-start max-[235px]:items-start items-center flex-row gap-4">
-        <i class="icon-[gridicons--code] max-[235px]:text-xl text-3xl text-white/80" />
-        <h1 class="text-center max-[235px]:text-2xl text-4xl text-white font-bold">{translate.nav.projects}</h1>
+        <i class="icon-[gridicons--code] max-[235px]:text-xl text-3xl dark:text-white/80 text-black/80" />
+        <h1 class="text-center max-[235px]:text-2xl text-4xl dark:text-white text-black font-bold">{translate.nav.projects}</h1>
     </div>
 </div>
 <div class="flex w-full flex-col px-2 md:px-0">
@@ -81,7 +81,7 @@ const PROJECTS = {
                 const { name, url, image, frameworks } = project;
                 return(
                     <div class="flex flex-col md:flex-row gap-6 md:gap-0 justify-between items-start group w-full opacity-0 project-card">
-                        <div class="m-0 p-0 overflow-hidden rounded-2xl border border-gray-800 group-hover:border-gray-700 transition-all">
+                        <div class="m-0 p-0 overflow-hidden rounded-2xl border border-gray-300 dark:border-gray-800 dark:group-hover:border-gray-700 group-hover:border-gray-300 transition-all">
                             <img 
                                 src={image} 
                                 alt={`${project} image`} 
@@ -90,7 +90,7 @@ const PROJECTS = {
                         </div>
                         <div class="flex flex-col justify-start items-start md:items-center px-1 md:px-4 w-full md:min-w-[400px] h-full opacity-0 project-description">
                             <div class="flex flex-1 flex-col justify-start items-start">
-                                <h3 class="text-yellow-400 text-3xl max-[250px]:text-xl max-[170px]:text-base font-extrabold uppercase">{name}</h3>
+                                <h3 class="dark:text-yellow-400 text-yellow-600 text-3xl max-[250px]:text-xl max-[170px]:text-base font-extrabold uppercase">{name}</h3>
                                 <ul class="flex w-full flex-row flex-wrap justify-start items-center my-2 gap-2">
                                     { frameworks &&
                                         Object.values(frameworks).map((framework) => {
@@ -99,7 +99,7 @@ const PROJECTS = {
                                             return(
                                                 <li class={`rounded-full px-2 py-1 ${mainColor} flex justify-center items-center gap-2`}>
                                                     <img src={image} alt={`${name} frameworks image`} class="size-4" />
-                                                    <span class="text-white text-base max-[250px]:text-sm md:text-[13px]">
+                                                    <span class="dark:text-white text-black text-base max-[250px]:text-sm md:text-[13px]">
                                                         {name}
                                                     </span>
                                                 </li>
@@ -109,14 +109,14 @@ const PROJECTS = {
                                 </ul>
                                 <div class="text-white/85 text-base selection:text-black selection:bg-yellow-400 mt-10 md:mt-5">
                                     {project.description.map(line => (
-                                        <p class="mt-2">{line}</p>
+                                        <p class="mt-2 dark:text-white text-black">{line}</p>
                                     ))}
                                 </div>
                             </div>
                             <div class="flex w-full flex-row justify-start items-center my-3">
-                                <a href={url} class="text-white hover:brightness-125 transition-all px-3 py-2 rounded-xl flex justify-center gap-2 items-center bg-gray-900 border border-white/30 group">
-                                    <i class="icon-[line-md--link] group-hover:brightness-125" />
-                                    {translate.projects.preview}
+                                <a href={url} class="text-white dark:hover:brightness-125 hover:brightness-90 transition-all px-3 py-2 rounded-xl flex justify-center gap-2 items-center dark:bg-gray-900 bg-gray-300 border dark:border-white/30 border-black/30 group">
+                                    <i class="icon-[line-md--link] dark:group-hover:brightness-125 group-hover:brightness-90 dark:text-white text-black" />
+                                    <span class="dark:text-white text-black">{translate.projects.preview}</span>
                                 </a>
                             </div>
                         </div>
