--- a/src/components/TrajectorySection.astro
+++ b/src/components/TrajectorySection.astro
@@ -32,10 +32,10 @@ const EXPERIENCES = [
 <div class="flex w-full flex-col pt-(--header-h)">
     <div class="w-full flex justify-center items-center mb-10">
         <div class="flex w-full flex-col justify-center items-center">
-            <h1 class="text-center max-[235px]:text-2xl text-4xl text-white font-extrabold">
+            <h1 class="text-center max-[235px]:text-2xl text-4xl dark:text-white text-black font-extrabold">
                 {translate.trajectory.title}
             </h1>
-            <span class="text-white/80 text-sm mt-2">
+            <span class="dark:text-white/80 text-black/80 text-sm mt-2">
                 {translate.work_experience}
             </span>
         </div>
@@ -43,7 +43,7 @@ const EXPERIENCES = [
 
     <div class="relative w-full max-w-3xl mx-auto py-10">
         <div
-            class="max-[180px]:hidden absolute left-0 ml-2 md:ml-0 md:left-1/2 top-0 translate-x-0 md:-translate-x-1/2 w-0.5 h-full bg-gray-700 rounded-full animate-height-to-full"
+            class="max-[180px]:hidden absolute left-0 ml-2 md:ml-0 md:left-1/2 top-0 translate-x-0 md:-translate-x-1/2 w-0.5 h-full dark:bg-gray-700 bg-gray-300 rounded-full animate-height-to-full"
             id="timeline-line"
         >
         </div>
@@ -63,11 +63,11 @@ const EXPERIENCES = [
                                     index % 2 === 0
                                         ? "-left-4 md:left-auto -translate-x-0.75 md:translate-x-0 top-6 md:top-5 md:-right-2"
                                         : "-left-4 -translate-x-0.75 md:translate-x-0 top-6 md:top-5 md:-left-2"
-                                } w-4 h-4 bg-blue-500 rounded-full border-4 border-gray-900 z-10 flex`}
+                                } w-4 h-4 dark:bg-blue-500 bg-blue-300 rounded-full border-4 dark:border-gray-900 border-gray-200 z-10 flex`}
                             />
 
                             <div
-                                class={`bg-transparent md:bg-gray-800 rounded-2xl shadow-lg max-[180px]:p-0 p-5 experience-card opacity-0 w-full md:w-fit
+                                class={`bg-transparent dark:md:bg-gray-800 md:bg-gray-300 rounded-2xl shadow-lg max-[180px]:p-0 p-5 experience-card opacity-0 w-full md:w-fit
                                 ${
                                     index % 2 === 0
                                         ? "ml-0 mr-0 md:ml-auto md:mr-8"
@@ -75,16 +75,16 @@ const EXPERIENCES = [
                                 }`}
                             >
                                 <div class="w-full flex flex-col">
-                                    <h3 class="text-xl max-[170px]:text-base font-bold text-white">
+                                    <h3 class="text-xl max-[170px]:text-base font-bold dark:text-white text-black/80">
                                         {role}
                                     </h3>
-                                    <p class="text-blue-400 max-[170px]:text-[12px] font-semibold">
+                                    <p class="dark:text-blue-400 text-blue-700 max-[170px]:text-[12px] font-semibold">
                                         {company}
                                     </p>
-                                    <p class="text-sm text-gray-400">
+                                    <p class="text-sm dark:text-gray-400 text-gray-500">
                                         {start} – {end}
                                     </p>
-                                    <p class="text-gray-300 mt-2 text-ellipsis">{description}</p>
+                                    <p class="dark:text-gray-300 text-gray-800 mt-2 text-ellipsis">{description}</p>
                                 </div>
                             </div>
                         </div>
