--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -32,7 +32,7 @@ const PROJECTS = {
             id: 'tailwindcss-framework',
             name: 'TailwindCSS',
             image: 'https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/tailwindcss/tailwindcss-original.svg',
-            mainColor: 'bg-tailwindcss',
+            mainColor: 'dark:bg-tailwindcss bg-blue-200',
         },
       }
     },
@@ -62,7 +62,7 @@ const PROJECTS = {
             id: 'tailwindcss-framework',
             name: 'TailwindCSS',
             image: 'https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/tailwindcss/tailwindcss-original.svg',
-            mainColor: 'bg-tailwindcss',
+            mainColor: 'dark:bg-tailwindcss bg-blue-200',
         },
       }
     },
