--- a/src/pages/[locale]/index.astro
+++ b/src/pages/[locale]/index.astro
@@ -44,7 +44,7 @@ const creador = translate.creator_name;
         </section>
 
         {/* CONTACT SECTION */}
-        <section class="min-h-screen" data-section="about-me" aria-label="About me section">
+        <section class="mb-60" data-section="about-me" aria-label="About me section">
             <div class="flex flex-col w-full px-4 md:px-0">
                 <AboutMe creador={creador} translate={translate} locale={locale} />
             </div>
