--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -47,9 +47,9 @@ const previewImage = new URL('/img/preview.png', Astro.site).href;
 		<slot />
 		<Footer />
 
-		<button class="fixed outline-none border-none right-6 bottom-10 flex justify-center items-center m-0 rounded-full dark:bg-gray-50 dark:bg-gray-800 p-1 select-none hover:scale-115 transition-all z-9999 cursor-pointer pointer-events-none opacity-0" aria-label="Botón de desplazamiento para arriba" id="scrollTopBtn">
+		<button class="fixed outline-none border-none right-6 bottom-10 flex justify-center items-center m-0 rounded-full dark:bg-gray-800 shadow-lg bg-gray-200 p-1 select-none hover:scale-115 transition-all z-9999 cursor-pointer pointer-events-none opacity-0" aria-label="Botón de desplazamiento para arriba" id="scrollTopBtn">
 			<div class="flex justify-center items-center size-8">
-				<span class="icon-[material-symbols--arrow-upward-rounded] text-lg text-yellow-400"></span>
+				<span class="icon-[material-symbols--arrow-upward-rounded] text-xl font-extrabold dark:text-yellow-400 text-black"></span>
 			</div>
 		</button>
 	</body>
